Cherry-pick 0d8538115ee0. rdar://problem/108096981

REGRESSION(257456@main): Scrollbar shows up on sites that initiate fullscreen from an iframe
    https://bugs.webkit.org/show_bug.cgi?id=255197
    rdar://108096981

    Reviewed by Simon Fraser.

    The following UA stylesheet rule was not applying:
    ```
    :root:-webkit-full-screen-document:not(:fullscreen) {
        overflow: hidden !important;
    }
    ```
    because :-webkit-full-screen-document used isFullscreen() (exposed as a legacy API), did not take in account documents fullscreened implicitly by their child frame.

    Switch to fullscreenElement() which queries from the top layer, and includes implicitly fullscreened elements.

    * LayoutTests/fullscreen/fullscreen-no-scrollbars-on-ancestor-root-expected.html: Added.
    * LayoutTests/fullscreen/fullscreen-no-scrollbars-on-ancestor-root.html: Added.
    * Source/WebCore/css/SelectorCheckerTestFunctions.h:
    (WebCore::matchesFullScreenDocumentPseudoClass):

    Canonical link: https://commits.webkit.org/266340@main

Identifier: 265870.261@safari-7616.1.27-branch